--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,12 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saarcasmic.github.io/AskFinance",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
-    "gh-pages": "^6.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -44,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.15"
   }
 }
