--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,6 @@ services:
       # Command to install dependencies
       command: |
         pip install -r requirements.txt
-    start: uvicorn server.main:app --host 0.0.0.0 --port 8000
+    start: uvicorn server.app.main:app --host 0.0.0.0 --port 8000
     env: python
     plan: free
