--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,7 @@ sqlalchemy==2.0.29  # If using SQLAlchemy ORM in addition to MongoDB
 dnspython==2.6.1   # For DNS-related utilities in your project
 python-dotenv==1.0.0  # For environment variable management
 pydantic[email]  # or email-validator
+pymongo[srv]  # or pymongo[tls]
 
 # For development purposes
 black==21.12b0
