--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,6 +9,7 @@ python-dotenv==1.0.0  # For environment variable management
 pydantic[email]  # or email-validator
 pymongo[srv]  # or pymongo[tls]
 google-auth==2.36.0  # For Google OAuth2 authentication
+fastapi-oauth2==0.3.0  # For OAuth2 authentication
 
 # For development purposes
 black==21.12b0
