--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -10,6 +10,8 @@ pydantic[email]  # or email-validator
 pymongo[srv]  # or pymongo[tls]
 google-auth==2.36.0  # For Google OAuth2 authentication
 fastapi-oauth2==1.3.0  # For OAuth2 authentication
+slowapi==0.1.9  # For rate limiting
+redis==5.2.0  # For Redis caching
 
 # For development purposes
 black==21.12b0
