--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,6 +12,7 @@ google-auth==2.36.0  # For Google OAuth2 authentication
 fastapi-oauth2==1.3.0  # For OAuth2 authentication
 slowapi==0.1.9  # For rate limiting
 redis==5.2.0  # For Redis caching
+fastapi-cache2==0.2.2  # For caching
 
 # For development purposes
 black==21.12b0
